Added projects and links to code

--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -4,18 +4,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  // z-index: 10000;
 }
 .contact-form {
-  // z-index: 10000;
-
   padding: 10%;
   box-sizing: border-box;
   width: 100%;
   max-width: 1000px;
-  // margin-top: 5%;
   &__title {
-    // font-family: "BreeSerif";
     font-family: "ArchitectsDaughter";
     font-size: 1.5rem;
     font-weight: 200;
@@ -37,12 +32,9 @@
   &__socials {
     position: relative;
     background-color: transparent;
-    // width: 80%;
     display: flex;
     justify-content: space-evenly;
-    // align-items: center;
     margin-bottom: 5%;
-    // z-index: 1000000;
   }
   &__social-icon {
     background-color: transparent;
@@ -51,12 +43,9 @@
   }
   &__container {
     margin-top: 10%;
-    // z-index: 10000;
   }
   &__label-user {
     position: relative;
-    // font-family: "SpaceMono";
-    // font-family: "BreeSerif";
   }
   &__label-envelope {
     position: relative;
@@ -69,20 +58,17 @@
     box-sizing: border-box;
     width: 100%;
     font-size: 1.25rem;
-    // font-family: "SpaceMono";
     font-family: "BreeSerif";
     background: transparent;
     margin: 7px 0;
     border: 3px solid #b7f3ed;
     border-radius: 10px;
-    // color: #00c1a8;
     color: #fff;
     padding-left: 55px;
     padding-bottom: 5px;
     opacity: 0.7;
     min-height: 55px;
     text-shadow: none;
-    // z-index: 9999;
     &:focus {
       color: white;
       outline: none;
@@ -99,15 +85,11 @@
     box-sizing: border-box;
     width: 100%;
     font-size: 1.25rem;
-
     background-color: transparent;
-
     margin: 7px 0;
     border: 3px solid #b7f3ed;
     border-radius: 10px;
-    // color: #00c1a8;
     color: #fff;
-    // font-family: "SpaceMono";
     font-family: "BreeSerif";
     padding-top: 7px;
     padding-left: 55px;
@@ -133,7 +115,6 @@
     margin-top: 11px;
     margin-left: 10px;
     position: absolute;
-    // z-index: 1;
   }
   &__icon-envelope {
     color: white;
@@ -141,18 +122,14 @@
     margin-top: 11px;
     margin-left: 10px;
     position: absolute;
-    // z-index: 10;
   }
   &__icon-comment {
     color: white;
     background-color: transparent;
     // top: 5%; chrome and safari okay
     margin-top: 10px;
-    // margin-top: 15px;
     margin-left: 10px;
     position: absolute;
-    // opacity: 1;
-    // z-index: 1;
   }
   &__button {
     width: 100%;
@@ -160,14 +137,11 @@
     color: white;
     background-color: transparent;
     font-size: 1.5rem;
-    // font-family: "BioRhyme";
-    // font-family: "BreeSerif";
     font-family: "ArchitectsDaughter";
 
     padding: 0;
     border: 3px solid #b7f3ed;
     border-radius: 10px;
-    // z-index: 1;
     position: relative;
     &:hover {
       background: #b7f3ed;
@@ -178,27 +152,30 @@
   }
 }
 .fa-paper-plane {
-  // position: absolute;
-  // left: 20vw;
   margin-right: 10px;
   background-color: transparent;
 }
 
 .contact-form__input::placeholder {
-  // padding-left: 5px;
   color: #fff;
   font-size: 1.25rem;
-  // font-family: "SpaceMono";
   font-family: "BreeSerif";
-  // font-family: "ArchitectsDaughter";
   padding-top: 0;
 }
 .contact-form__input-msg::placeholder {
   font-size: 1.25rem;
   color: white;
-  // color: black;
-
-  // font-family: "SpaceMono";
   font-family: "BreeSerif";
-  // font-family: "ArchitectsDaughter";
+}
+
+@-moz-document url-prefix() {
+  .contact-form__icon-user {
+    margin-top: 22px;
+  }
+  .contact-form__icon-envelope {
+    margin-top: 22px;
+  }
+  .contact-form__icon-comment {
+    margin-top: 22px;
+  }
 }
