colour palette change

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
   /* background-color: #3399ff; */
   /* background-color: #2f4454; */
   /* background-color: #2a3b49; */
-  background-color: #051418;
+  background-color: #050a17;
 
   /* overflow: hidden; */
   /* background-color: white; */
