--- a/src/Styles/_fonts.scss
+++ b/src/Styles/_fonts.scss
@@ -18,3 +18,10 @@
   font-weight: 400;
   font-style: normal;
 }
+
+@font-face {
+  font-family: "Gladiator";
+  src: url("../Assets/Fonts/GLADIATOR.ttf") format("opentype");
+  font-weight: 400;
+  font-style: normal;
+}
