--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -168,14 +168,14 @@
   font-family: "BreeSerif";
 }
 
-@-moz-document url-prefix() {
-  .contact-form__icon-user {
-    margin-top: 22px;
-  }
-  .contact-form__icon-envelope {
-    margin-top: 22px;
-  }
-  .contact-form__icon-comment {
-    margin-top: 22px;
-  }
-}
+// @-moz-document url-prefix() {
+//   .contact-form__icon-user {
+//     margin-top: 22px;
+//   }
+//   .contact-form__icon-envelope {
+//     margin-top: 22px;
+//   }
+//   .contact-form__icon-comment {
+//     margin-top: 22px;
+//   }
+// }
