--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -9,6 +9,7 @@
 }
 .tesssst {
   display: flex;
+  margin-top: 10%;
   justify-content: space-evenly;
   //   align-items: center;
   //   align-content: space-between;
@@ -27,7 +28,9 @@
 
 @media screen and (max-width: 766px) {
   .tesssst {
+    // margin-top: 300px;
     display: block;
+    height: 100%;
     width: 100%;
   }
 
@@ -55,7 +58,7 @@
   margin: 40px auto;
   overflow: hidden;
   @include tablet {
-    width: 35%;
+    width: 25%;
     // max-height: 400px;
   }
 }
@@ -83,6 +86,7 @@
 .content-image {
   width: 100%;
   height: 100%;
+  object-fit: cover;
   border: 5px solid white;
   border-radius: 5px;
 }
