--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -48,7 +48,7 @@
     // background-color: #b7f3ed;
     background-color: #050a17;
     // color: #051418;
-    color: #45eeff;
+    color: whitesmoke;
     font-size: 1.5rem;
     font-family: "BreeSerif";
     text-decoration: none;
@@ -58,7 +58,7 @@
       // background-color: rgb(143, 57, 57);
       // border-radius: 4px;
       font-weight: 800;
-      color: white;
+      color: #45eeff;
       // color: #1854e0;
       transition: all 0.2s ease-out;
     }
