--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -5,7 +5,8 @@
 .navBar {
   // background-color: #b7f3ed;
   background-color: #050a17;
-  border-bottom: 2px solid #b7f3ed;
+  border-bottom: 2px solid #45eeff;
+  width: 100%;
   height: 80px;
   display: flex;
   justify-content: flex-start;
