--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -117,7 +117,7 @@
   &__save {
     background-color: transparent;
     // color: #b7f3ed;
-    color: #98ff98;
+    color: #45eeff;
     font-size: 2rem;
   }
   &__skills-title {
@@ -134,18 +134,19 @@
     }
     @include desktop {
       font-size: 5rem;
-      margin-bottom: 5%;
+      margin-bottom: 2%;
+      margin-top: 5%;
     }
   }
   &__skills-container {
     // position: relative;
     // background-color: transparent;
-    margin-bottom: 20%;
+    margin-bottom: 0;
     display: flex;
     width: 95%;
     padding: 4% 2%;
     box-sizing: border-box;
-    height: 100vh;
+    height: 85vh;
     z-index: 1000;
     // z-index: 2;
   }
@@ -165,15 +166,13 @@
   }
   &__skills-img {
     opacity: 0.3;
-
     background-color: unset;
     width: 200%;
-    height: calc(100% - 10vh);
+    height: calc(100% - 15vh);
     object-fit: cover;
     transition: 0.5s;
     &:hover {
       opacity: 0.9;
-
       width: 100%;
       height: 100%;
     }
@@ -192,7 +191,7 @@
       font-size: 1.1rem;
     }
     @include desktop {
-      font-size: 2rem;
+      font-size: 1.9rem;
     }
   }
 }
@@ -418,7 +417,7 @@
   font-weight: 500;
   letter-spacing: 2px;
   // color: #b7f3ed;
-  color: #98ff98;
+  color: #45eeff;
   @include tablet {
     font-size: 2rem;
     // color: #b7f3ed;
