--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -1,185 +1,285 @@
 @import "../../Styles/global";
 
-.container {
+.projects {
   padding: 1em 0;
-  //   float: left;
   width: 100%;
-  //   display: flex;
-  //   justify-content: space-around;
-}
-.tesssst {
-  display: flex;
-  margin-top: 10%;
-  justify-content: space-evenly;
-  //   align-items: center;
-  //   align-content: space-between;
-  flex-wrap: wrap;
-}
-.container-link-wrp {
-  width: 100%;
-  margin-top: 5%;
-  display: flex;
-  // padding-right: 10px;
-  // scroll-padding-left: 10px;
-  justify-content: center;
-}
-.content-link {
-  width: 30%;
-  // margin-bottom: 20px;
-
-  cursor: grab;
-  @include desktop {
-    width: 10%;
-    // margin-top: 40%;
+  &__container {
+    display: flex;
+    margin-top: 10%;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
   }
-}
-
-.contact-form__social-icon {
-  margin-top: 10px;
-  margin-bottom: 10px;
-  // width: 100%;
-  // margin-left: 20px;
-  // margin-right: 20px;
-  @include desktop {
-    margin-top: 20px;
+  &__content {
+    width: 80%;
+    height: 300px;
+    border-radius: 5px;
+    position: relative;
+    margin: 40px auto;
+    overflow: hidden;
+    @include tablet {
+      width: 35%;
+      height: auto;
+    }
+  }
+  &__content-overlay {
+    background: rgba(248, 240, 240, 0.7);
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    opacity: 0;
+    -webkit-transition: all 0.4s ease-in-out 0s;
+    -moz-transition: all 0.4s ease-in-out 0s;
+    transition: all 0.4s ease-in-out 0s;
+  }
+  &__content-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border: 5px solid white;
+    border-radius: 5px;
+  }
+  &__content-details {
+    position: absolute;
+    text-align: center;
+    padding-left: 1em;
+    padding-right: 1em;
+    width: 100%;
+    height: 90%;
+    top: 50%;
+    left: 50%;
+    opacity: 0;
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    -webkit-transition: all 0.3s ease-in-out 0s;
+    -moz-transition: all 0.3s ease-in-out 0s;
+    transition: all 0.3s ease-in-out 0s;
+    @include tablet {
+      height: 40%;
+    }
+  }
+  &__content-title {
+    // color: #1a1a1a;
+    text-align: center;
+    // margin-bottom: 10px;
+    margin-top: 2px;
+    margin-bottom: 0;
+    font-family: "BreeSerif";
+    font-size: 2rem;
+    color: #fff;
+    font-weight: 500;
+    letter-spacing: 0.15em;
+    text-transform: uppercase;
+    @include tablet {
+      font-size: 1.5rem;
+    }
+    @include desktop {
+      font-size: 2rem;
+    }
+  }
+  &__content-text {
+    font-family: "BreeSerif";
+    color: white;
+    font-size: 0.9rem;
+    @include tablet {
+      margin-top: 3%;
+    }
+    @include desktop {
+      margin-top: 5%;
+      font-size: 1.2rem;
+    }
+  }
+  &__link-wrp {
+    width: 100%;
+    margin-top: 5%;
+    display: flex;
+    justify-content: center;
+  }
+  &__content-link {
+    width: 30%;
+    cursor: grab;
+    @include desktop {
+      width: 10%;
+    }
+  }
+  &__social-icon {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    color: white;
+    &:hover {
+      color: #45eeff;
+    }
+    @include desktop {
+      margin-top: 20px;
+    }
   }
 }
 
 @media screen and (max-width: 766px) {
-  .tesssst {
-    // margin-top: 300px;
+  .projects__container {
     display: block;
     height: 100%;
     width: 100%;
   }
-
-  // .content {
-  //   width: 80%;
-  // }
 }
 
-// @media screen and (min-width: 900px) {
-//   .container {
-//     width: 33.33333%;
-//   }
-// }
-
-.container .title {
-  color: #1a1a1a;
-  text-align: center;
-  margin-bottom: 10px;
-}
-
-.content {
-  width: 80%;
-  border-radius: 5px;
-  position: relative;
-  margin: 40px auto;
-  overflow: hidden;
-  @include tablet {
-    width: 35%;
-    // max-height: 400px;
-  }
-}
-
-.content .content-overlay {
-  background: rgba(248, 240, 240, 0.7);
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  opacity: 0;
-  // border-radius: 5px;
-  -webkit-transition: all 0.4s ease-in-out 0s;
-  -moz-transition: all 0.4s ease-in-out 0s;
-  transition: all 0.4s ease-in-out 0s;
-}
-
-.content:hover .content-overlay {
+.projects__content:hover .projects__content-overlay {
   opacity: 1;
 }
 
-.content-image {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  border: 5px solid white;
-  border-radius: 5px;
-}
-
-.content-details {
-  position: absolute;
-  text-align: center;
-  // align-items: center;
-  padding-left: 1em;
-  padding-right: 1em;
-  width: 100%;
-  height: 90%;
-  top: 50%;
-  left: 50%;
-  opacity: 0;
-  -webkit-transform: translate(-50%, -50%);
-  -moz-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  -webkit-transition: all 0.3s ease-in-out 0s;
-  -moz-transition: all 0.3s ease-in-out 0s;
-  transition: all 0.3s ease-in-out 0s;
-  @include tablet {
-    height: 40%;
-  }
-}
-
-.content-title {
-  margin-top: 2px;
-  margin-bottom: 0;
-  font-family: "BreeSerif";
-  font-size: 2rem;
-}
-
-.content-text {
-  font-family: "BreeSerif";
-  color: white;
-  font-size: 0.9rem;
-  @include tablet {
-    margin-top: 0;
-    // font-size: 0.8rem;
-  }
-  @include desktop {
-    margin-top: 5%;
-    font-size: 1.2rem;
-  }
-}
-
-.content:hover .content-details {
+.projects__content:hover .projects__content-details {
   top: 50%;
   left: 50%;
   opacity: 0.7;
   height: auto;
-  // width: 100%;
 }
-
-.content-details h3 {
-  color: #fff;
-  font-weight: 500;
-  letter-spacing: 0.15em;
-  // margin-bottom: 0.5em;
-  text-transform: uppercase;
-  @include tablet {
-    font-size: 1.5rem;
-  }
-  @include desktop {
-    font-size: 2rem;
-  }
-}
-
-// .content-details p {
-//   color: #fff;
-//   font-size: 0.8em;
-// }
 
 .fadeIn-bottom {
   top: 80%;
 }
+
+// .projects__link-wrp {
+//   width: 100%;
+//   margin-top: 5%;
+//   display: flex;
+//   justify-content: center;
+// }
+// .content-link {
+//   width: 30%;
+
+//   cursor: grab;
+//   @include desktop {
+//     width: 10%;
+//   }
+// }
+
+// .contact-form__social-icon {
+//   margin-top: 10px;
+//   margin-bottom: 10px;
+//   @include desktop {
+//     margin-top: 20px;
+//   }
+// }
+
+// @media screen and (max-width: 766px) {
+//   .projects__container {
+//     display: block;
+//     height: 100%;
+//     width: 100%;
+//   }
+// }
+
+// .projects .title {
+//   color: #1a1a1a;
+//   text-align: center;
+//   margin-bottom: 10px;
+// }
+
+// .content {
+//   width: 80%;
+//   height: 400px;
+//   border-radius: 5px;
+//   position: relative;
+//   margin: 40px auto;
+//   overflow: hidden;
+//   @include tablet {
+//     width: 35%;
+//     height: auto;
+//   }
+// }
+
+// .projects__content-overlay {
+//   background: rgba(248, 240, 240, 0.7);
+//   position: absolute;
+//   height: 100%;
+//   width: 100%;
+//   left: 0;
+//   top: 0;
+//   bottom: 0;
+//   right: 0;
+//   opacity: 0;
+//   -webkit-transition: all 0.4s ease-in-out 0s;
+//   -moz-transition: all 0.4s ease-in-out 0s;
+//   transition: all 0.4s ease-in-out 0s;
+// }
+
+// .projects__content:hover .projects__content-overlay {
+//   opacity: 1;
+// }
+
+// .content-image {
+//   width: 100%;
+//   height: 100%;
+//   object-fit: cover;
+//   border: 5px solid white;
+//   border-radius: 5px;
+// }
+
+// .content-details {
+//   position: absolute;
+//   text-align: center;
+//   padding-left: 1em;
+//   padding-right: 1em;
+//   width: 100%;
+//   height: 90%;
+//   top: 50%;
+//   left: 50%;
+//   opacity: 0;
+//   -webkit-transform: translate(-50%, -50%);
+//   -moz-transform: translate(-50%, -50%);
+//   transform: translate(-50%, -50%);
+//   -webkit-transition: all 0.3s ease-in-out 0s;
+//   -moz-transition: all 0.3s ease-in-out 0s;
+//   transition: all 0.3s ease-in-out 0s;
+//   @include tablet {
+//     height: 40%;
+//   }
+// }
+
+// .content-title {
+//   margin-top: 2px;
+//   margin-bottom: 0;
+//   font-family: "BreeSerif";
+//   font-size: 2rem;
+// }
+
+// .content-text {
+//   font-family: "BreeSerif";
+//   color: white;
+//   font-size: 0.9rem;
+//   @include tablet {
+//     margin-top: 0;
+//   }
+//   @include desktop {
+//     margin-top: 5%;
+//     font-size: 1.2rem;
+//   }
+// }
+
+// .projects__content:hover .projects__content-details {
+//   top: 50%;
+//   left: 50%;
+//   opacity: 0.7;
+//   height: auto;
+// }
+
+// .content-details h3 {
+//   color: #fff;
+//   font-weight: 500;
+//   letter-spacing: 0.15em;
+//   text-transform: uppercase;
+//   @include tablet {
+//     font-size: 1.5rem;
+//   }
+//   @include desktop {
+//     font-size: 2rem;
+//   }
+// }
+
+// .fadeIn-bottom {
+//   top: 80%;
+// }
