--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -6,41 +6,66 @@
   margin-top: 10%;
   background-color: transparent;
   margin-left: 5%;
-  // min-height: 525px;
   min-width: 405px;
   @include desktop {
     margin-top: 5%;
   }
-  &__logo {
-    width: 50px;
-    // height: 200px;
-    // margin-bottom: 50px;
+  &__container {
     background-color: transparent;
+    margin-bottom: 25px;
+    min-height: 205px;
   }
+  &__logo {
+      font-family: "Gladiator";
+      font-size: 3.9rem;
+      letter-spacing: 5px;
+      height: 80px;
+      color: #ff69b4;
+      font-weight: 400;
+      opacity: 1;
+      display: inline-block;
+      background-color: transparent;
+      @include tablet {
+        font-size: 5.6rem;
+      }
+      &:hover {
+        cursor: default;
+        -webkit-animation: jello-vertical 1.5s both;
+        animation: jello-vertical 1.5s both;
+      }
+    }
+    &__text {
+      font-size: 2.25rem;
+      letter-spacing: 5px;
+      height: 80px;
+      color: whitesmoke;
+      font-family: "BreeSerif";
+      font-weight: 400;
+      opacity: 1;
+      display: inline-block;
+      background-color: transparent;
+      @include tablet {
+        font-size: 4rem;
+        margin-top: 8%;
+      }
+      &:hover {
+        cursor: default;
+        color: #45eeff;
+        -webkit-animation: jello-vertical 1.5s both;
+        animation: jello-vertical 1.5s both;
+      }
+      &:nth-child(7) {
+        padding-right: 10px;
+      }
+      &:nth-child(8) {
+        color: #ff69b4;
+      }
+      &:nth-child(16) {
+        padding-right: 10px;
+      }
+    }
 }
 
-.lala {
-  font-family: "Gladiator";
-  font-size: 3.9rem;
-  letter-spacing: 5px;
-  height: 80px;
-  // color: #45eeff;
-  // color: #ff2483;
-  color: #ff69b4;
-  
-  font-weight: 400;
-  opacity: 1;
-  display: inline-block;
-  background-color: transparent;
-  @include tablet {
-    font-size: 5.6rem;
-  }
-  &:hover {
-    cursor: default;
-    -webkit-animation: jello-vertical 1.5s both;
-    animation: jello-vertical 1.5s both;
-  }
-}
 
 .extra {
   margin-bottom: 15px;
@@ -49,66 +74,7 @@
   }
 }
 
-.home-greeting__h1 {
-  background-color: transparent;
-  margin-bottom: 25px;
-  min-height: 205px;
-  // max-height: 205px;
-}
-
-h2 {
-  background-color: transparent;
-  margin-top: 10%;
-  min-height: 24px;
-  cursor: default;
-  @include tablet {
-    margin-top: 19%;
-  }
-  @include desktop {
-    margin-top: 14%;
-  }
-}
-
-.home-greeting__text {
-  font-size: 2.25rem;
-  letter-spacing: 5px;
-  height: 80px;
-  // color: #98ff98;
-  color: whitesmoke;
-  font-family: "BreeSerif";
-  font-weight: 400;
-  // margin-top: 5%;
-  // margin-bottom: 5%;
-  opacity: 1;
-  display: inline-block;
-  background-color: transparent;
-  @include tablet {
-    font-size: 4rem;
-    margin-top: 8%;
-  }
-  &:hover {
-    cursor: default;
-    color: #45eeff;
-    -webkit-animation: jello-vertical 1.5s both;
-    animation: jello-vertical 1.5s both;
-  }
-  &:nth-child(7) {
-    padding-right: 10px;
-  }
-  &:nth-child(8) {
-    color: #ff69b4;
-  }
-  &:nth-child(16) {
-    padding-right: 10px;
-  }
-}
-
-.test {
-  margin-top: 2%;
-  @include tablet {
-    margin-top: 5%;
-  }
-}
+/* Word Carousel Styling */
 
 .wordCarousel {
   background-color: transparent;
@@ -119,6 +85,10 @@ h2 {
   color: #45eeff;
   // color: #ff69b4;
   // color: #050a17;
+  background-color: transparent;
+  min-height: 24px;
+  cursor: default;
+
   @include tablet {
     margin-top: 13%;
     color: #45eeff;
@@ -136,7 +106,7 @@ h2 {
     font-family: "ArchitectsDaughter";
     background-color: transparent;
   }
-  div {
+  &__container {
     background-color: transparent;
     overflow: hidden;
     position: relative;
@@ -146,7 +116,6 @@ h2 {
     margin-top: -10px;
     ul {
       background-color: transparent;
-      // margin-bottom: 5%;
     }
     li {
       background-color: transparent;
@@ -172,8 +141,10 @@ h2 {
     }
   }
 }
+
+/* Btn styling */
+
 .btn {
-  
   // Set margin top to 5% for tab/desk
   background-color: transparent;
   font-family: "BreeSerif";
@@ -188,101 +159,103 @@ h2 {
     margin-top: 5%;
     margin-left: 0;
   }
-}
 
-.btn-slice {
-  margin-top: 5%;
-  background-color: transparent;
-	padding: 1.2rem 2.5rem;
-  border: 3px solid #b7f3ed;
-	border-radius: 0rem;
-	color: #b7f3ed;
-  font-size: 0.6875rem;
-  font-family: "BreeSerif";
-	font-weight: 700;
-	letter-spacing: 0.3rem;
-  position: relative;
+&__slice {
+    margin-top: 5%;
+    background-color: transparent;
+    padding: 1.2rem 2.5rem;
+    border: 3px solid #b7f3ed;
+    border-radius: 0rem;
+    color: #b7f3ed;
+    font-size: 0.6875rem;
+    font-family: "BreeSerif";
+    font-weight: 700;
+    letter-spacing: 0.3rem;
+    position: relative;
+    
+    -webkit-transition: all 1000ms cubic-bezier(0.890, 0, 0.140, 1); /* older webkit */
+    -webkit-transition: all 1000ms cubic-bezier(0.890, -0.170, 0.140, 1.225); 
+    -moz-transition: all 1000ms cubic-bezier(0.890, -0.170, 0.140, 1.225); 
+    -o-transition: all 1000ms cubic-bezier(0.890, -0.170, 0.140, 1.225); 
+    transition: all 1000ms cubic-bezier(0.890, -0.170, 0.140, 1.225); /* custom */
   
-  -webkit-transition: all 1000ms cubic-bezier(0.890, 0, 0.140, 1); /* older webkit */
-  -webkit-transition: all 1000ms cubic-bezier(0.890, -0.170, 0.140, 1.225); 
-  -moz-transition: all 1000ms cubic-bezier(0.890, -0.170, 0.140, 1.225); 
-  -o-transition: all 1000ms cubic-bezier(0.890, -0.170, 0.140, 1.225); 
-  transition: all 1000ms cubic-bezier(0.890, -0.170, 0.140, 1.225); /* custom */
+    -webkit-transition-timing-function: cubic-bezier(0.890, 0, 0.140, 1); /* older webkit */
+    -webkit-transition-timing-function: cubic-bezier(0.890, -0.170, 0.140, 1.225); 
+    -moz-transition-timing-function: cubic-bezier(0.890, -0.170, 0.140, 1.225); 
+    -o-transition-timing-function: cubic-bezier(0.890, -0.170, 0.140, 1.225); 
+    transition-timing-function: cubic-bezier(0.890, -0.170, 0.140, 1.225); /* custom */
+  
+    @include tablet {
+      border: 5px solid #b7f3ed;
+      color: #b7f3ed;
+    }
+  }
 
-  -webkit-transition-timing-function: cubic-bezier(0.890, 0, 0.140, 1); /* older webkit */
-  -webkit-transition-timing-function: cubic-bezier(0.890, -0.170, 0.140, 1.225); 
-  -moz-transition-timing-function: cubic-bezier(0.890, -0.170, 0.140, 1.225); 
-  -o-transition-timing-function: cubic-bezier(0.890, -0.170, 0.140, 1.225); 
-  transition-timing-function: cubic-bezier(0.890, -0.170, 0.140, 1.225); /* custom */
+  &__top  {
+    background-color: transparent;
+    position: relative;
+    height: 8px;
+    overflow: hidden;
+    top: 0;
+    -webkit-transition: all 300ms cubic-bezier(1.000, 0, 0.025, 1); /* older webkit */
+    -webkit-transition: all 300ms cubic-bezier(1.000, -0.055, 0.025, 1.040); 
+    -moz-transition: all 300ms cubic-bezier(1.000, -0.055, 0.025, 1.040); 
+    -o-transition: all 300ms cubic-bezier(1.000, -0.055, 0.025, 1.040); 
+    transition: all 300ms cubic-bezier(1.000, -0.055, 0.025, 1.040); /* custom */
+  
+    -webkit-transition-timing-function: cubic-bezier(1.000, 0, 0.025, 1); /* older webkit */
+    -webkit-transition-timing-function: cubic-bezier(1.000, -0.055, 0.025, 1.040); 
+    -moz-transition-timing-function: cubic-bezier(1.000, -0.055, 0.025, 1.040); 
+    -o-transition-timing-function: cubic-bezier(1.000, -0.055, 0.025, 1.040); 
+    transition-timing-function: cubic-bezier(1.000, -0.055, 0.025, 1.040); /* custom */
+    
+    -webkit-transition-delay:0.35s;     
+    -moz-transition-delay::0.35s; 
+    -ms-transition-delay::0.35s;     
+    -o-transition-delay::0.35s;     
+    transition-delay::0.35s;
+  }
 
-  @include tablet {
-    border: 5px solid #b7f3ed;
-	  color: #b7f3ed;
+  &__text {
+    background-color: transparent;
+  }
+
+  &__bottom  {
+    background-color: transparent;
+    position: relative;
+    height: 6px;
+    overflow: hidden;
+    bottom: 0;
+    -webkit-transition: all 300ms cubic-bezier(1.000, 0, 0.025, 1); /* older webkit */
+    -webkit-transition: all 300ms cubic-bezier(1.000, -0.055, 0.025, 1.040); 
+    -moz-transition: all 300ms cubic-bezier(1.000, -0.055, 0.025, 1.040); 
+    -o-transition: all 300ms cubic-bezier(1.000, -0.055, 0.025, 1.040); 
+    transition: all 300ms cubic-bezier(1.000, -0.055, 0.025, 1.040); /* custom */
+  
+    -webkit-transition-timing-function: cubic-bezier(1.000, 0, 0.025, 1); /* older webkit */
+    -webkit-transition-timing-function: cubic-bezier(1.000, -0.055, 0.025, 1.040); 
+    -moz-transition-timing-function: cubic-bezier(1.000, -0.055, 0.025, 1.040); 
+    -o-transition-timing-function: cubic-bezier(1.000, -0.055, 0.025, 1.040); 
+    transition-timing-function: cubic-bezier(1.000, -0.055, 0.025, 1.040); /* custom */
+    
+    -webkit-transition-delay:0.35s;     
+    -moz-transition-delay::0.35s; 
+    -ms-transition-delay::0.35s;     
+    -o-transition-delay::0.35s;     
+    transition-delay::0.35s;
   }
 }
 
-.btn-slice .top  {
-  background-color: transparent;
-	position: relative;
-	height: 8px;
-	overflow: hidden;
-  top: 0;
-  -webkit-transition: all 300ms cubic-bezier(1.000, 0, 0.025, 1); /* older webkit */
-  -webkit-transition: all 300ms cubic-bezier(1.000, -0.055, 0.025, 1.040); 
-  -moz-transition: all 300ms cubic-bezier(1.000, -0.055, 0.025, 1.040); 
-  -o-transition: all 300ms cubic-bezier(1.000, -0.055, 0.025, 1.040); 
-  transition: all 300ms cubic-bezier(1.000, -0.055, 0.025, 1.040); /* custom */
+/* Browser settings for btn */
 
-  -webkit-transition-timing-function: cubic-bezier(1.000, 0, 0.025, 1); /* older webkit */
-  -webkit-transition-timing-function: cubic-bezier(1.000, -0.055, 0.025, 1.040); 
-  -moz-transition-timing-function: cubic-bezier(1.000, -0.055, 0.025, 1.040); 
-  -o-transition-timing-function: cubic-bezier(1.000, -0.055, 0.025, 1.040); 
-  transition-timing-function: cubic-bezier(1.000, -0.055, 0.025, 1.040); /* custom */
-  
-  -webkit-transition-delay:0.35s;     
-  -moz-transition-delay::0.35s; 
-  -ms-transition-delay::0.35s;     
-  -o-transition-delay::0.35s;     
-  transition-delay::0.35s;
-}
-
-.btn-slice .bottom  {
-  background-color: transparent;
-	position: relative;
-	height: 6px;
-	overflow: hidden;
-  bottom: 0;
-  -webkit-transition: all 300ms cubic-bezier(1.000, 0, 0.025, 1); /* older webkit */
-  -webkit-transition: all 300ms cubic-bezier(1.000, -0.055, 0.025, 1.040); 
-  -moz-transition: all 300ms cubic-bezier(1.000, -0.055, 0.025, 1.040); 
-  -o-transition: all 300ms cubic-bezier(1.000, -0.055, 0.025, 1.040); 
-  transition: all 300ms cubic-bezier(1.000, -0.055, 0.025, 1.040); /* custom */
-
-  -webkit-transition-timing-function: cubic-bezier(1.000, 0, 0.025, 1); /* older webkit */
-  -webkit-transition-timing-function: cubic-bezier(1.000, -0.055, 0.025, 1.040); 
-  -moz-transition-timing-function: cubic-bezier(1.000, -0.055, 0.025, 1.040); 
-  -o-transition-timing-function: cubic-bezier(1.000, -0.055, 0.025, 1.040); 
-  transition-timing-function: cubic-bezier(1.000, -0.055, 0.025, 1.040); /* custom */
-  
-  -webkit-transition-delay:0.35s;     
-  -moz-transition-delay::0.35s; 
-  -ms-transition-delay::0.35s;     
-  -o-transition-delay::0.35s;     
-  transition-delay::0.35s;
-}
-
-span {
-  background-color: transparent;
-}
-
-.btn-slice .bottom span {
+.btn__slice .btn__bottom .btn__text {
   background-color: transparent;
   top: -8px;
   position: absolute;
   left: 0;
 }
 
-.btn-slice:hover .top {
+.btn__slice:hover .btn__top {
   background-color: transparent;
 	top: -5px;
   -webkit-transition-delay:0.35s;     
@@ -292,7 +265,7 @@ span {
   transition-delay::0.35s; 
 }
 
-.btn-slice:hover .bottom {
+.btn__slice:hover .btn__bottom {
   background-color: transparent;
 	bottom: -5px;
   -webkit-transition-delay:0.35s;     
@@ -301,11 +274,13 @@ span {
   -o-transition-delay::0.35s;     
   transition-delay::0.35s; 
 }
-.btn-slice:hover, .btn-slice:focus, .btn-slice:active {
+
+.btn__slice:hover, .btn__slice:focus, .btn__slice:active {
   margin-left: 10px;
   background-color: transparent;
 }
-.btn-slice:before{
+
+.btn__slice:before{
   content: '';
   background-color: transparent;
 	height: 1px;
@@ -331,10 +306,14 @@ span {
     background-color: #b7f3ed;
   }
 }
-.btn-slice:hover:before{
+
+.btn__slice:hover:before{
   background-color: transparent;
 	width: 130%;
 }
+
+
+
 
 // Text Flipper Animation
 .flip4 { animation: flip4 10s cubic-bezier(0.23, 1, 0.32, 1.2) infinite; }
@@ -351,48 +330,6 @@ span {
   99.99% { margin-top: 0px; }
   100% { margin-top: -270px; }
 }
-// .flip5 {
-//   animation: flip5 25s cubic-bezier(0.23, 1, 0.32, 1.2) infinite;
-// }
-
-// @keyframes flip5 {
-//   0% {
-//     margin-top: -450px;
-//   }
-//   5% {
-//     margin-top: -360px;
-//   }
-//   10% {
-//     margin-top: -360px;
-//   }
-//   25% {
-//     margin-top: -270px;
-//   }
-//   30% {
-//     margin-top: -270px;
-//   }
-//   50% {
-//     margin-top: -180px;
-//   }
-//   55% {
-//     margin-top: -180px;
-//   }
-//   75% {
-//     margin-top: -90px;
-//   }
-//   80% {
-//     margin-top: -90px;
-//   }
-//   90% {
-//     margin-top: 0px;
-//   }
-//   99.99% {
-//     margin-top: 0px;
-//   }
-//   100% {
-//     margin-top: -360px;
-//   }
-// }
 
 // Bouncing Text Animation
 
@@ -426,6 +363,7 @@ span {
     transform: scale3d(1, 1, 1);
   }
 }
+
 @keyframes jello-vertical {
   0% {
     -webkit-transform: scale3d(1, 1, 1);
@@ -456,19 +394,3 @@ span {
     transform: scale3d(1, 1, 1);
   }
 }
-
-// .testtest {
-//   color: #ff69b4;
-// }
-
-// .testtest1 {
-//   color: #98ff98;
-// }
-
-// .testtest2 {
-//   color: #40e0d0;
-// }
-
-// .testtest3 {
-//   color: #ff69b4;
-// }
