--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -78,10 +78,10 @@
 
 .wordCarousel {
   background-color: transparent;
-  font-size: 1.25rem;
+  font-size: 1.5rem;
   margin-top: 4%;
   width: 78.5%;
-  font-weight: 500;
+  font-weight: 800;
   color: #45eeff;
   // color: #ff69b4;
   // color: #050a17;
@@ -93,7 +93,7 @@
     margin-top: 13%;
     color: #45eeff;
     // color: #ff69b4;
-    font-weight: 700;
+    // font-weight: 700;
     font-size: 2.15rem;
     width: 100%;
   }
@@ -121,9 +121,10 @@
       background-color: transparent;
       font-family: "ArchitectsDaughter";
       letter-spacing: 0.5px;
+      font-size: 1.5rem;
       // color: #050a17;
       color: #45eeff;
-      font-weight: 500;
+      font-weight: 700;
       padding: 0 17px 0 0;
       height: 45px;
       margin-bottom: 45px;
@@ -164,7 +165,7 @@
     margin-top: 5%;
     background-color: transparent;
     padding: 1.2rem 2.5rem;
-    border: 3px solid #b7f3ed;
+    border: 4px solid #b7f3ed;
     border-radius: 0rem;
     color: #b7f3ed;
     font-size: 0.6875rem;
