--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -10,15 +10,17 @@
     flex-wrap: wrap;
   }
   &__content {
+    background-color: transparent;
+
     width: 80%;
-    height: 327px;
+    height: 100%;
     border-radius: 5px;
     position: relative;
     margin: 40px auto;
     overflow: hidden;
     @include tablet {
       width: 35%;
-      height: auto;
+      // height: 100%;
     }
   }
   &__content-overlay {
@@ -37,10 +39,13 @@
   }
   &__content-image {
     width: 100%;
-    height: 100%;
-    object-fit: cover;
+    height: 300px;
+    // object-fit: cover;
     border: 5px solid white;
     border-radius: 5px;
+    @include desktop {
+      height: 600px;
+    }
   }
   &__content-details {
     position: absolute;
